# RT58x_SDK

./: .gitmodules  README.md
Docs/RT58x_SDK_Reference_Guide/: _comparator_2config_2project__config_8h.html  _comparator_2config_2project__config_8h_source.html  _comparator_2main_8c.html  _crypto_2config_2project__config_8h.html  _crypto_2config_2project__config_8h_source.html  _crypto_2main_8c.html  _crypto___c_c_m_2config_2project__config_8h.html  _crypto___c_c_m_2config_2project__config_8h_source.html  _crypto___c_c_m_2main_8c.html  _crypto___h_m_a_c_2config_2project__config_8h.html  _crypto___h_m_a_c_2config_2project__config_8h_source.html  _crypto___h_m_a_c_2main_8c.html  _d_m_a___linklist_2config_2project__config_8h.html  _d_m_a___linklist_2config_2project__config_8h_source.html  _d_m_a___linklist_2main_8c.html  _d_m_a___memory_2config_2project__config_8h.html  _d_m_a___memory_2config_2project__config_8h_source.html  _d_m_a___memory_2main_8c.html  _flash_2config_2project__config_8h.html  _flash_2config_2project__config_8h_source.html  _flash_2main_8c.html  _free_r_t_o_s_2_free_r_t_o_s_config_8h_source.html  _free_r_t_o_s_2config_2project__config_8h.html  _free_r_t_o_s_2config_2project__config_8h_source.html  _free_r_t_o_s_2main_8c.html  _g_p_i_o_2config_2project__config_8h.html  _g_p_i_o_2config_2project__config_8h_source.html  _g_p_i_o_2main_8c.html  _i2_c_2config_2project__config_8h.html  _i2_c_2config_2project__config_8h_source.html  _i2_c_2main_8c.html  _i2_s_2config_2project__config_8h.html  _i2_s_2config_2project__config_8h_source.html  _i2_s_2main_8c.html  _p_w_m_2config_2project__config_8h.html  _p_w_m_2config_2project__config_8h_source.html  _p_w_m_2main_8c.html  _q_s_p_i_2config_2project__config_8h.html  _q_s_p_i_2config_2project__config_8h_source.html  _q_s_p_i_2main_8c.html  (+1558 more)
Docs/RT58x_SDK_Reference_Guide/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+140 more)
Middleware/BLE_Mesh/: ble_mesh_lib_api.c
Middleware/Bootloader/: bootloader.s
Middleware/FOTA/: ble_fota.c
Middleware/MemoryMgmt/: mem_mgmt.c
Middleware/Prebuild/: lib_2.4_thread_platform.lib  lib_SubG_FTD_thread_platform.lib  lib_SubG_MTD_thread_platform.lib  lib_SubG_thread_platform.lib  lib_ble_hci_task.lib  lib_ble_host.lib  lib_ble_mesh_cl.lib  lib_ble_mesh_sr.lib  lib_dual_task.lib  lib_freertos_thread_SubG_FTD_platform.lib  lib_freertos_thread_SubG_MTD_platform.lib  lib_pci_task.lib  lib_rf_mcu.lib  lib_zigbee_stack.lib  lib_zigbee_stack_ed.lib
Middleware/ProtocolExample/: example_api.c
Middleware/RFB/: rfb_comm_common.c  rfb_comm_subg.c  rfb_port.c  rfb_rtos_comm_common.c
Middleware/RUCI/: ruci_cmn_event.c  ruci_cmn_hal_cmd.c  ruci_cmn_sys_cmd.c  ruci_pci15p4_mac_cmd.c  ruci_pci_ble_cmd.c  ruci_pci_common_cmd.c  ruci_pci_data.c  ruci_pci_event.c  ruci_pci_fsk_cmd.c  ruci_pci_ook_cmd.c  ruci_pci_oqpsk_cmd.c  ruci_pci_slink_cmd.c  ruci_pci_zwave_cmd.c  ruci_sf_event.c  ruci_sf_host_cmd.c  ruci_sf_host_event.c  ruci_sf_host_sys_cmd.c
Middleware/Version_Information/: git_ver_info.h  version_api.c  version_api.h  version_info.c
Middleware/Zigbee/: zigbee_lib_api.c
Project/: README.md
RT58x_SDK_v1.6.0/Project/Examples/UART/GCC/: CMakeLists.txt
RT58x_SDK_v1.6.0/Tool/: Zigbee_Tool.rar
Tool/: Security_Boot_Tool.rar  Uart_Break_Tool.rar  Zigbee_Tool.rar  iOS App.rar
Tool/Flash_Programming_Algorithm/: RT58x_1MB.FLM
tool/: Security_Boot_Tool.rar  Uart_Break_Tool.rar  iOS App.rar
(+1945 files in other folders)
